chore: mac build